# memlineage

./: .gitignore  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
scripts/: bandit2sarif.py
src/memlineage/: __init__.py  attacks.py  benchmark.py  crypto.py  detector.py  gate.py  keyreg.py  lineage.py  store.py  trajectory.py  types.py
tests/: test_benchmark_coverage.py  test_defense.py
