[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memlineage"
version = "0.1.0"
description = "Integrated memory-poisoning defense for persistent LLM agents (provenance + lineage + trajectory detection)"
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Pedro Sordo Martínez", email = "amurlaniakea@gmail.com" }]
dependencies = [
    "cryptography>=42",
    "networkx>=3.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "bandit"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
